# Photoshop

./: Base_filter.h  Blur.cpp  Blur.h  CMakeLists.txt  Crop.cpp  Crop.h  EdgeDetection.cpp  EdgeDetection.h  Grayscale.cpp  Grayscale.h  Negative.cpp  Negative.h  Parser.cpp  Parser.h  README.md  Redactor.cpp  Redactor.h  Sharpening.cpp  Sharpening.h  Tape_effect.cpp  Tape_effect.h  bmp_reader.cpp  bmp_reader.h  image_processor.cpp
